[chore] Tiny spacing issue fixed

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1258,7 +1258,7 @@ a.button:hover {
 
 [data-role="colors"] {
     position: absolute;
-    top: 8rem;
+    top: 6rem;
     text-align: center;
     width: 90%;
     left: 5%;
